update Demo1 again

--- a/Demo1.ipynb
+++ b/Demo1.ipynb
@@ -19,9 +19,10 @@
     "                                                       pickle_filename=\"outputs/list_of_cmes.pickle\"):\n",
     "```\n",
     "##### Inputs to the function\n",
-    "- **workload**: A neural network model defined in ONNX format or ZigZag's own format.\n",
+    "- **workload**: A neural network model defined in ONNX format or ZigZag's own format. (It can be the path to the model or the model itself.\n",
     "- **accelerator**: A high-level HW architecture description.\n",
     "- **mapping**: A file that specifies core allocation, spatial mapping, and memory operand link.\n",
+    "*Note: workload (in zigzag's own format), accelerator, mapping can be the path to the module or the module itself; workload (in onnx format) should be the path to the file.*\n",
     "- **opt**: Optimization target. It can be 'energy', 'latency', or 'EDP'.\n",
     "- **dump_filename_pattern**: The name of the result file.\n",
     "- **pickle_filename**: The name of the file which includes all the detailed metadata for analysing and debugging.\n",
@@ -56,8 +57,14 @@
     "\n",
     "# workload 3 (self-defined model)\n",
     "# model = \"resnet18\"  # uncomment these 2 lines to try the third workload\n",
-    "# workload = f\"zigzag.inputs.examples.workload.{model}\"\n",
-    "\n",
+    "# workload = f\"zigzag.inputs.examples.workload.{model}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
     "# Get the accelerator and mapping\n",
     "mapping = \"zigzag.inputs.examples.mapping.edge_tpu_like\"\n",
     "accelerator = \"zigzag.inputs.examples.hardware.Edge_TPU_like\"\n",
@@ -65,7 +72,10 @@
     "# Set the filenames\n",
     "dump_filename_pattern=f\"outputs/Edge_TPU-{model}-layer_?.json\"\n",
     "pickle_filename = f\"outputs/Edge_TPU-{model}-saved_list_of_cmes.pickle\""
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -76,64 +86,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-08 17:30:05,451 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 17:30:05,452 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 17:30:05,453 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 17:30:05,454 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 17:30:05,454 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 17:30:05,455 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 17:30:05,456 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 17:30:05,457 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 17:30:05,458 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
-      "2023-02-08 17:30:05,466 - parse_accelerator_from_path +56 - INFO - Parsed accelerator with cores [1].\n",
-      "2023-02-08 17:30:05,467 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-08 17:30:05,467 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:05,470 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 427.08it/s]\n",
-      "2023-02-08 17:30:07,168 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0.json\n",
-      "2023-02-08 17:30:07,169 - run +33 - INFO - Processing layer 4...\n",
-      "2023-02-08 17:30:07,170 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:07,171 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 438.71it/s]\n",
-      "2023-02-08 17:30:18,666 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4.json\n",
-      "2023-02-08 17:30:18,669 - run +33 - INFO - Processing layer 8...\n",
-      "2023-02-08 17:30:18,669 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:18,670 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 438.42it/s]\n",
-      "2023-02-08 17:30:20,318 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8.json\n",
-      "2023-02-08 17:30:20,319 - run +33 - INFO - Processing layer 10...\n",
-      "2023-02-08 17:30:20,320 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:20,320 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 429.44it/s]\n",
-      "2023-02-08 17:30:32,063 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10.json\n",
-      "2023-02-08 17:30:32,065 - run +33 - INFO - Processing layer 12...\n",
-      "2023-02-08 17:30:32,065 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:32,066 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 428.50it/s]\n",
-      "2023-02-08 17:30:43,833 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12.json\n",
-      "2023-02-08 17:30:43,834 - run +33 - INFO - Processing layer 16...\n",
-      "2023-02-08 17:30:43,835 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:43,835 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 555.71it/s]\n",
-      "2023-02-08 17:30:45,137 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16.json\n",
-      "2023-02-08 17:30:45,138 - run +33 - INFO - Processing layer 19...\n",
-      "2023-02-08 17:30:45,139 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:45,140 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 571.30it/s]\n",
-      "2023-02-08 17:30:46,406 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19.json\n",
-      "2023-02-08 17:30:46,407 - run +33 - INFO - Processing layer 22...\n",
-      "2023-02-08 17:30:46,410 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 17:30:46,411 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 120/120 [00:00<00:00, 476.17it/s]\n",
-      "2023-02-08 17:30:46,669 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22.json\n",
-      "2023-02-08 17:30:46,673 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall.json\n",
-      "2023-02-08 17:30:46,685 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
+      "2023-02-08 21:22:58,490 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 21:22:58,491 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 21:22:58,491 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 21:22:58,492 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 21:22:58,494 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 21:22:58,495 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-08 21:22:58,496 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-08 21:22:58,497 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-08 21:22:58,498 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
+      "2023-02-08 21:22:58,506 - parse_accelerator_from_path +56 - INFO - Parsed accelerator with cores [1].\n",
+      "2023-02-08 21:22:58,507 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-08 21:22:58,508 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:22:58,509 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 434.80it/s]\n",
+      "2023-02-08 21:23:00,175 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0.json\n",
+      "2023-02-08 21:23:00,176 - run +33 - INFO - Processing layer 4...\n",
+      "2023-02-08 21:23:00,176 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:00,177 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:11<00:00, 439.56it/s]\n",
+      "2023-02-08 21:23:11,648 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4.json\n",
+      "2023-02-08 21:23:11,652 - run +33 - INFO - Processing layer 8...\n",
+      "2023-02-08 21:23:11,652 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:11,653 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 440.91it/s]\n",
+      "2023-02-08 21:23:13,293 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8.json\n",
+      "2023-02-08 21:23:13,295 - run +33 - INFO - Processing layer 10...\n",
+      "2023-02-08 21:23:13,297 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:13,298 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:11<00:00, 423.37it/s]\n",
+      "2023-02-08 21:23:25,211 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10.json\n",
+      "2023-02-08 21:23:25,212 - run +33 - INFO - Processing layer 12...\n",
+      "2023-02-08 21:23:25,213 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:25,213 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:11<00:00, 427.81it/s]\n",
+      "2023-02-08 21:23:36,999 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12.json\n",
+      "2023-02-08 21:23:37,001 - run +33 - INFO - Processing layer 16...\n",
+      "2023-02-08 21:23:37,002 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:37,002 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 560.76it/s]\n",
+      "2023-02-08 21:23:38,292 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16.json\n",
+      "2023-02-08 21:23:38,293 - run +33 - INFO - Processing layer 19...\n",
+      "2023-02-08 21:23:38,293 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:38,294 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 559.87it/s]\n",
+      "2023-02-08 21:23:39,585 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19.json\n",
+      "2023-02-08 21:23:39,587 - run +33 - INFO - Processing layer 22...\n",
+      "2023-02-08 21:23:39,587 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 21:23:39,588 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 120/120 [00:00<00:00, 495.29it/s]\n",
+      "2023-02-08 21:23:39,836 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22.json\n",
+      "2023-02-08 21:23:39,840 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall.json\n",
+      "2023-02-08 21:23:39,848 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
      ]
     }
    ],
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
