--- a/Demo1.ipynb
+++ b/Demo1.ipynb
@@ -92,58 +92,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-08 21:22:58,490 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 21:22:58,491 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 21:22:58,491 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 21:22:58,492 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 21:22:58,494 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 21:22:58,495 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 21:22:58,496 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 21:22:58,497 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 21:22:58,498 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
-      "2023-02-08 21:22:58,506 - parse_accelerator_from_path +56 - INFO - Parsed accelerator with cores [1].\n",
-      "2023-02-08 21:22:58,507 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-08 21:22:58,508 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:22:58,509 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 434.80it/s]\n",
-      "2023-02-08 21:23:00,175 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0.json\n",
-      "2023-02-08 21:23:00,176 - run +33 - INFO - Processing layer 4...\n",
-      "2023-02-08 21:23:00,176 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:00,177 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 439.56it/s]\n",
-      "2023-02-08 21:23:11,648 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4.json\n",
-      "2023-02-08 21:23:11,652 - run +33 - INFO - Processing layer 8...\n",
-      "2023-02-08 21:23:11,652 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:11,653 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 440.91it/s]\n",
-      "2023-02-08 21:23:13,293 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8.json\n",
-      "2023-02-08 21:23:13,295 - run +33 - INFO - Processing layer 10...\n",
-      "2023-02-08 21:23:13,297 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:13,298 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 423.37it/s]\n",
-      "2023-02-08 21:23:25,211 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10.json\n",
-      "2023-02-08 21:23:25,212 - run +33 - INFO - Processing layer 12...\n",
-      "2023-02-08 21:23:25,213 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:25,213 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 427.81it/s]\n",
-      "2023-02-08 21:23:36,999 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12.json\n",
-      "2023-02-08 21:23:37,001 - run +33 - INFO - Processing layer 16...\n",
-      "2023-02-08 21:23:37,002 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:37,002 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 560.76it/s]\n",
-      "2023-02-08 21:23:38,292 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16.json\n",
-      "2023-02-08 21:23:38,293 - run +33 - INFO - Processing layer 19...\n",
-      "2023-02-08 21:23:38,293 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:38,294 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 559.87it/s]\n",
-      "2023-02-08 21:23:39,585 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19.json\n",
-      "2023-02-08 21:23:39,587 - run +33 - INFO - Processing layer 22...\n",
-      "2023-02-08 21:23:39,587 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 21:23:39,588 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 120/120 [00:00<00:00, 495.29it/s]\n",
-      "2023-02-08 21:23:39,836 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22.json\n",
-      "2023-02-08 21:23:39,840 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall.json\n",
-      "2023-02-08 21:23:39,848 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
+      "2023-02-08 22:23:34,974 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 22:23:34,975 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 22:23:34,978 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 22:23:34,979 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 22:23:34,980 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-08 22:23:34,981 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-08 22:23:34,982 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-08 22:23:34,983 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-08 22:23:34,984 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
+      "2023-02-08 22:23:34,992 - parse_accelerator_from_path +56 - INFO - Parsed accelerator with cores [1].\n",
+      "2023-02-08 22:23:34,993 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-08 22:23:34,993 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:23:34,995 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 394.63it/s]\n",
+      "2023-02-08 22:23:36,830 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0.json\n",
+      "2023-02-08 22:23:36,831 - run +33 - INFO - Processing layer 4...\n",
+      "2023-02-08 22:23:36,831 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:23:36,832 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 377.55it/s]\n",
+      "2023-02-08 22:23:50,188 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4.json\n",
+      "2023-02-08 22:23:50,190 - run +33 - INFO - Processing layer 8...\n",
+      "2023-02-08 22:23:50,190 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:23:50,191 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 388.84it/s]\n",
+      "2023-02-08 22:23:52,049 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8.json\n",
+      "2023-02-08 22:23:52,051 - run +33 - INFO - Processing layer 10...\n",
+      "2023-02-08 22:23:52,051 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:23:52,052 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 373.20it/s]\n",
+      "2023-02-08 22:24:05,563 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10.json\n",
+      "2023-02-08 22:24:05,564 - run +33 - INFO - Processing layer 12...\n",
+      "2023-02-08 22:24:05,564 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:24:05,565 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 378.16it/s]\n",
+      "2023-02-08 22:24:18,899 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12.json\n",
+      "2023-02-08 22:24:18,900 - run +33 - INFO - Processing layer 16...\n",
+      "2023-02-08 22:24:18,900 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:24:18,901 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 607.47it/s]\n",
+      "2023-02-08 22:24:20,092 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16.json\n",
+      "2023-02-08 22:24:20,093 - run +33 - INFO - Processing layer 19...\n",
+      "2023-02-08 22:24:20,094 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:24:20,094 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 630.76it/s]\n",
+      "2023-02-08 22:24:21,241 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19.json\n",
+      "2023-02-08 22:24:21,242 - run +33 - INFO - Processing layer 22...\n",
+      "2023-02-08 22:24:21,243 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-08 22:24:21,244 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 120/120 [00:00<00:00, 577.44it/s]\n",
+      "2023-02-08 22:24:21,456 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22.json\n",
+      "2023-02-08 22:24:21,459 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall.json\n",
+      "2023-02-08 22:24:21,469 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
      ]
     }
    ],
@@ -193,11 +193,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As logged during our ZigZag run, a list of 8 CMEs is saved to 'pickle_filename'. We load in this list and use the built-in visualization script to show an energy and latency breakdown for each of the layers. As the last fully connected layers are a clear bottleneck (you can verify this yourself by plotting all the CMEs instead of only the first 5), they are not plotted in this example.\n",
-    "\n",
-    "\n",
-    "#### 4.1) Energy and latency breakdown"
+    "As logged during our ZigZag run, a list of 8 CMEs is saved to 'pickle_filename'. We load in this list and use the built-in visualization script to show an energy and latency breakdown for each of the layers. As the last fully connected layers are a clear bottleneck (you can verify this yourself by plotting all the CMEs instead of only the first 5), they are not plotted in this example."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 4.1) View energy and latency breakdown"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -225,7 +231,7 @@
     "\n",
     "# Plot all the layers and save to 'plot_all.png'\n",
     "bar_plot_cost_model_evaluations_breakdown(cme_for_all_layers[:5], save_path=\"plot_breakdown.png\")  # plot for the first 5 layers\n",
-    "# bar_plot_cost_model_evaluations_breakdown(cme, save_path=\"plot_breakdown.png\")  # uncomment this line to plot for all the layers"
+    "# bar_plot_cost_model_evaluations_breakdown(cme_for_all_layers, save_path=\"plot_breakdown.png\")  # uncomment this line to plot for all the layers"
    ]
   },
   {
@@ -238,11 +244,17 @@
     ": Different layer shapes have different activation sizes (I/O) and parameter sizes (W), which cause a varying number of memory accesses, depending on the layout of the memory hierarchy for each of these operands and the achievable reuse for each operand within each memory.\n",
     "\n",
     "Latency breakdown\n",
-    ": Different aspects impact the latency. The spatial under-utilization of the array leads to \"spatial stalls\", where as insufficient memory bandwidth can lead to \"temporal stalls\".\n",
-    "\n",
-    "#### 4.2) View temporal mappings of all the layers\n",
-    "\n"
+    ": Different aspects impact the latency. The spatial under-utilization of the array leads to \"spatial stalls\", where as insufficient memory bandwidth can lead to \"temporal stalls\"."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 4.2) View temporal mappings of all the layers"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
