add Tutorial1_advance; zigzag-dse==2.1.7

--- a/Tutorial1.ipynb
+++ b/Tutorial1.ipynb
@@ -45,7 +45,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Define the mapping (fixed temporal ordering for now)"
+    "Define the mapping"
    ],
    "metadata": {
     "collapsed": false
@@ -170,7 +170,8 @@
     "def cores():\n",
     "    multiplier_array1 = multiplier_array_dut()\n",
     "    memory_hierarchy1 = memory_hierarchy_dut(multiplier_array1)\n",
-    "    core1 = Core(1, multiplier_array1, memory_hierarchy1)\n",
+    "    id = 1\n",
+    "    core1 = Core(id, multiplier_array1, memory_hierarchy1)\n",
     "    return {core1}\n",
     "\n",
     "\n",
@@ -213,14 +214,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-08 23:35:39,529 - parse_workload_from_path_or_from_module +41 - INFO - Created workload graph with 1 nodes and 0 edges.\n",
-      "2023-02-08 23:35:39,530 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-08 23:35:39,530 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
-      "2023-02-08 23:35:39,531 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 428.44it/s]\n",
-      "2023-02-08 23:35:41,221 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0.json\n",
-      "2023-02-08 23:35:41,224 - run +97 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0.json\n",
-      "2023-02-08 23:35:41,228 - run +149 - INFO - Saved pickled list of 1 CMEs to outputs/Our_HW-single_layer_cme.pickle.\n"
+      "2023-02-09 12:32:45,821 - parse_workload_from_path_or_from_module +41 - INFO - Created workload graph with 1 nodes and 0 edges.\n",
+      "2023-02-09 12:32:45,822 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-09 12:32:45,822 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
+      "2023-02-09 12:32:45,824 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 449.23it/s]\n",
+      "2023-02-09 12:32:47,435 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0_completeSave.json\n",
+      "2023-02-09 12:32:47,436 - run +97 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0_simpleSave.json\n",
+      "2023-02-09 12:32:47,440 - run +149 - INFO - Saved pickled list of 1 CMEs to outputs/Our_HW-single_layer_cme.pickle.\n"
      ]
     }
    ],
