--- a/Tutorial2.ipynb
+++ b/Tutorial2.ipynb
@@ -3,8 +3,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Tutorial 1: A simple example\n",
-    "This tutorial guides you through a simple example of using ZigZag. By the end of this tutorial, you will get a general idea of the inputs, the stage concept, and the temporal mapping search configuration."
+    "## Tutorial 2: Look into the ZigZag API function\n",
+    "This tutorial show you the implementation of the ZigZag API function.\n",
+    "\n",
+    "By the end of this tutorial, you will get a general idea of **the stage concept** (the key programming concept of the whole ZigZag project), and how to customize stages to meet different goals."
    ],
    "metadata": {
     "collapsed": false
@@ -13,8 +15,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1) Estimate HW cost estimation for fixed temporal and spatial mapping\n",
-    "Let's define our own one-layer workload"
+    "Let's have a look of the API function implementation"
    ],
    "metadata": {
     "collapsed": false
@@ -27,18 +28,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workload = {\n",
-    " 0: {  # conv2_4 of resnet18\n",
-    "        'operator_type': 'Conv',\n",
-    "        'equation': 'O[b][k][oy][ox]+=W[k][c][fy][fx]*I[b][c][iy][ix]',\n",
-    "        'dimension_relations': ['ix=1*ox+1*fx', 'iy=1*oy+1*fy'],\n",
-    "        'loop_dim_size': {'B': 1, 'K': 64, 'C': 64, 'OY': 56, 'OX': 56, 'FY': 3, 'FX': 3},\n",
-    "        'operand_precision': {'O': 16, 'O_final': 8, 'W': 8, 'I': 8},\n",
-    "        'operand_source': {'W': [], 'I': [5]},\n",
-    "        'constant_operands': ['W'],\n",
-    "        'operand_source_dimension_mapping': {'I': {'IX': 'OX', 'IY': 'OY', 'C': 'K'}},\n",
-    "    }\n",
-    "}"
+    "from zigzag.classes.stages import *\n",
+    "\n",
+    "def get_hardware_performance_zigzag(workload,\n",
+    "                                    accelerator,\n",
+    "                                    mapping,\n",
+    "                                    opt='latency',\n",
+    "                                    dump_filename_pattern=\"outputs/{datetime}.json\",\n",
+    "                                    pickle_filename=\"outputs/list_of_cmes.pickle\"):\n",
+    "    # Initialize the logger\n",
+    "    import logging as _logging\n",
+    "    _logging_level = _logging.INFO\n",
+    "    _logging_format = '%(asctime)s - %(funcName)s +%(lineno)s - %(levelname)s - %(message)s'\n",
+    "    _logging.basicConfig(level=_logging_level,\n",
+    "                         format=_logging_format)\n",
+    "\n",
+    "    # Sanity check on the optimization criterion\n",
+    "    if opt == 'energy':\n",
+    "        opt_stage = MinimalEnergyStage\n",
+    "    elif opt == 'latency':\n",
+    "        opt_stage = MinimalLatencyStage\n",
+    "    elif opt == 'EDP':\n",
+    "        opt_stage = MinimalEDPStage\n",
+    "    else:\n",
+    "        raise NotImplementedError(\"Optimization criterion 'opt' should be either 'energy' or 'latency' or 'EDP'.\")\n",
+    "\n",
+    "    # Check workload format and based on it select the correct workload parser stage\n",
+    "    try:\n",
+    "        if workload.split('.')[-1] == 'onnx':\n",
+    "            workload_parser_stage = ONNXModelParserStage\n",
+    "        else:\n",
+    "            workload_parser_stage = WorkloadParserStage\n",
+    "    except:\n",
+    "        workload_parser_stage = WorkloadParserStage\n",
+    "\n",
+    "    mainstage = MainStage([  # Initialize the MainStage as entry point\n",
+    "        workload_parser_stage,  # Parse the ONNX Model into the workload\n",
+    "        AcceleratorParserStage,  # Parse the accelerator module/passthrough given accelerator\n",
+    "        SimpleSaveStage,  # Save the summed CME energy and latency to a json\n",
+    "        PickleSaveStage,  # Save all received CMEs in a list to a pickle file\n",
+    "        SumStage,  # Sum up the received best CME across all layers of the workload\n",
+    "        WorkloadStage,  # Iterate through the different layers in the workload\n",
+    "        CompleteSaveStage,  # Save each processed layer to a json\n",
+    "        opt_stage,  # Reduce all CMEs, returning minimal energy/latency one\n",
+    "        SpatialMappingGeneratorStage,  # Generate multiple spatial mappings (SM)\n",
+    "        opt_stage,  # Reduce all CMEs, returning minimal energy/latency one\n",
+    "        LomaStage,  # Generate multiple temporal mappings (TM)\n",
+    "        # SalsaStage,  # Generate multiple temporal mappings (TM)\n",
+    "        # TemporalOrderingConversionStage,  # Based on the fixed temporal mapping order, generate one temporal mapping (TM)\n",
+    "        CostModelStage  # Evaluate generated SM and TM through cost model\n",
+    "    ],\n",
+    "        accelerator=accelerator,  # required by AcceleratorParserStage\n",
+    "        workload=workload,  # required by workload_parser_stage\n",
+    "        mapping=mapping,  # required by workload_parser_stage\n",
+    "        dump_filename_pattern=dump_filename_pattern,  # output file save pattern\n",
+    "        pickle_filename=pickle_filename,  # filename for pickled list of cmes\n",
+    "        loma_lpf_limit=6,  # required by LomaStage\n",
+    "        loma_show_progress_bar=True,\n",
+    "    )\n",
+    "\n",
+    "    # Launch the MainStage\n",
+    "    answers = mainstage.run()\n",
+    "    # Get CME from answer\n",
+    "    cmes = answers\n",
+    "\n",
+    "    return cmes[0][0].energy_total, cmes[0][0].latency_total2, cmes"
    ]
   },
   {
