--- a/Demo1.ipynb
+++ b/Demo1.ipynb
@@ -21,7 +21,7 @@
     "##### Inputs to the function\n",
     "- **workload**: A neural network model defined in ONNX format or ZigZag's own format. (It can be the path to the model or the model itself.\n",
     "- **accelerator**: A high-level HW architecture description.\n",
-    "- **mapping**: A file that specifies core allocation, spatial mapping, and memory operand link.\n",
+    "- **mapping**: A file that specifies core allocation, spatial mapping (optional), temporal ordering (optional), and memory operand link.\n",
     "*Note: workload (in zigzag's own format), accelerator, mapping can be the path to the module or the module itself; workload (in onnx format) should be the path to the file.*\n",
     "- **opt**: Optimization target. It can be 'energy', 'latency', or 'EDP'.\n",
     "- **dump_filename_pattern**: The name of the result file.\n",
@@ -92,58 +92,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-08 22:23:34,974 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 22:23:34,975 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 22:23:34,978 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 22:23:34,979 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 22:23:34,980 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-08 22:23:34,981 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 22:23:34,982 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 22:23:34,983 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-08 22:23:34,984 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
-      "2023-02-08 22:23:34,992 - parse_accelerator_from_path +56 - INFO - Parsed accelerator with cores [1].\n",
-      "2023-02-08 22:23:34,993 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-08 22:23:34,993 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:23:34,995 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 394.63it/s]\n",
-      "2023-02-08 22:23:36,830 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0.json\n",
-      "2023-02-08 22:23:36,831 - run +33 - INFO - Processing layer 4...\n",
-      "2023-02-08 22:23:36,831 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:23:36,832 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:13<00:00, 377.55it/s]\n",
-      "2023-02-08 22:23:50,188 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4.json\n",
-      "2023-02-08 22:23:50,190 - run +33 - INFO - Processing layer 8...\n",
-      "2023-02-08 22:23:50,190 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:23:50,191 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 388.84it/s]\n",
-      "2023-02-08 22:23:52,049 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8.json\n",
-      "2023-02-08 22:23:52,051 - run +33 - INFO - Processing layer 10...\n",
-      "2023-02-08 22:23:52,051 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:23:52,052 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:13<00:00, 373.20it/s]\n",
-      "2023-02-08 22:24:05,563 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10.json\n",
-      "2023-02-08 22:24:05,564 - run +33 - INFO - Processing layer 12...\n",
-      "2023-02-08 22:24:05,564 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:24:05,565 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:13<00:00, 378.16it/s]\n",
-      "2023-02-08 22:24:18,899 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12.json\n",
-      "2023-02-08 22:24:18,900 - run +33 - INFO - Processing layer 16...\n",
-      "2023-02-08 22:24:18,900 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:24:18,901 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 607.47it/s]\n",
-      "2023-02-08 22:24:20,092 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16.json\n",
-      "2023-02-08 22:24:20,093 - run +33 - INFO - Processing layer 19...\n",
-      "2023-02-08 22:24:20,094 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:24:20,094 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 630.76it/s]\n",
-      "2023-02-08 22:24:21,241 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19.json\n",
-      "2023-02-08 22:24:21,242 - run +33 - INFO - Processing layer 22...\n",
-      "2023-02-08 22:24:21,243 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-08 22:24:21,244 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 120/120 [00:00<00:00, 577.44it/s]\n",
-      "2023-02-08 22:24:21,456 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22.json\n",
-      "2023-02-08 22:24:21,459 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall.json\n",
-      "2023-02-08 22:24:21,469 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
+      "2023-02-09 12:31:18,127 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-09 12:31:18,130 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-09 12:31:18,132 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-09 12:31:18,133 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-09 12:31:18,135 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-09 12:31:18,137 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-09 12:31:18,138 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-09 12:31:18,139 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-09 12:31:18,140 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
+      "2023-02-09 12:31:18,149 - parse_accelerator_from_path +56 - INFO - Parsed accelerator with cores [1].\n",
+      "2023-02-09 12:31:18,150 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-09 12:31:18,151 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:31:18,152 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:02<00:00, 317.99it/s]\n",
+      "2023-02-09 12:31:20,431 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0_completeSave.json\n",
+      "2023-02-09 12:31:20,431 - run +33 - INFO - Processing layer 4...\n",
+      "2023-02-09 12:31:20,432 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:31:20,433 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:17<00:00, 284.66it/s]\n",
+      "2023-02-09 12:31:38,150 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4_completeSave.json\n",
+      "2023-02-09 12:31:38,153 - run +33 - INFO - Processing layer 8...\n",
+      "2023-02-09 12:31:38,154 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:31:38,155 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:02<00:00, 299.35it/s]\n",
+      "2023-02-09 12:31:40,565 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8_completeSave.json\n",
+      "2023-02-09 12:31:40,568 - run +33 - INFO - Processing layer 10...\n",
+      "2023-02-09 12:31:40,569 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:31:40,570 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 369.78it/s]\n",
+      "2023-02-09 12:31:54,207 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10_completeSave.json\n",
+      "2023-02-09 12:31:54,209 - run +33 - INFO - Processing layer 12...\n",
+      "2023-02-09 12:31:54,209 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:31:54,210 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 378.47it/s]\n",
+      "2023-02-09 12:32:07,534 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12_completeSave.json\n",
+      "2023-02-09 12:32:07,535 - run +33 - INFO - Processing layer 16...\n",
+      "2023-02-09 12:32:07,535 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:32:07,536 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 574.45it/s]\n",
+      "2023-02-09 12:32:08,795 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16_completeSave.json\n",
+      "2023-02-09 12:32:08,797 - run +33 - INFO - Processing layer 19...\n",
+      "2023-02-09 12:32:08,797 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:32:08,798 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 566.50it/s]\n",
+      "2023-02-09 12:32:10,074 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19_completeSave.json\n",
+      "2023-02-09 12:32:10,076 - run +33 - INFO - Processing layer 22...\n",
+      "2023-02-09 12:32:10,076 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-09 12:32:10,077 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 120/120 [00:00<00:00, 526.54it/s]\n",
+      "2023-02-09 12:32:10,309 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22_completeSave.json\n",
+      "2023-02-09 12:32:10,312 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall_simpleSave.json\n",
+      "2023-02-09 12:32:10,321 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
      ]
     }
    ],
